# slack-hs

./: slack.cabal
src/: Main.hs
