name:                slack
version:             0.1.0.0
synopsis:            Interact with Slack from the command line
description:         Please see README.md
homepage:            https://github.com/julienXX/slack.hs#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2017 Julien Blanchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable slack
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , bytestring
